--- a/color toggle assignment/style.css
+++ b/color toggle assignment/style.css
@@ -18,7 +18,7 @@ body {
 .navbar__btn {
   width: 60px;
   height: 100%;
-  background-image: url(img/hamburger_menu.png);
+  background-image: url(../img/hamburger_menu.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
